--- a/src/abacus-kochka/translations/source_strings.json
+++ b/src/abacus-kochka/translations/source_strings.json
@@ -260,63 +260,21 @@
   },
   {
    "hashToLeaf": {
-    "T0DgXP5K+rwH+D4SJDbnsQ==": {
-     "text": "Come to enjoy a coffee from Chiapas and spend some time with our lovely cats.",
+    "bTmLrZMg8Tci2XDtAf3e7Q==": {
+     "text": "Giving a second chance to our rescued cats. 😻",
      "desc": "catch phrase"
     }
    },
    "filepath": "src/Homepage.js",
    "line_beg": 27,
    "col_beg": 16,
-   "line_end": 29,
-   "col_end": 22,
+   "line_end": 27,
+   "col_end": 93,
    "project": "",
    "jsfbt": {
     "t": {
      "desc": "catch phrase",
-     "text": "Come to enjoy a coffee from Chiapas and spend some time with our lovely cats."
-    },
-    "m": []
-   }
-  },
-  {
-   "hashToLeaf": {
-    "qhyxBCe/pUVDATLDYaNRug==": {
-     "text": "Tuesday - Sunday 12pm - 9pm",
-     "desc": "opening hours"
-    }
-   },
-   "filepath": "src/HomepageFooter.js",
-   "line_beg": 15,
-   "col_beg": 8,
-   "line_end": 15,
-   "col_end": 67,
-   "project": "",
-   "jsfbt": {
-    "t": {
-     "desc": "opening hours",
-     "text": "Tuesday - Sunday 12pm - 9pm"
-    },
-    "m": []
-   }
-  },
-  {
-   "hashToLeaf": {
-    "01L7L5zx9XKSlIfQTGdfVg==": {
-     "text": "Calle Tonalá 346, Roma Sur, Cuauhtémoc, 06760, CDMX, Mexico",
-     "desc": "address"
-    }
-   },
-   "filepath": "src/HomepageFooter.js",
-   "line_beg": 20,
-   "col_beg": 10,
-   "line_end": 20,
-   "col_end": 95,
-   "project": "",
-   "jsfbt": {
-    "t": {
-     "desc": "address",
-     "text": "Calle Tonalá 346, Roma Sur, Cuauhtémoc, 06760, CDMX, Mexico"
+     "text": "Giving a second chance to our rescued cats. 😻"
     },
     "m": []
    }
